--- a/home.html
+++ b/home.html
@@ -17,14 +17,16 @@
 body{
     display: block;
     margin: 0;
-    background: #0c0d60;
+    background: #fff;
     font-family: 'Prompt', sans-serif;
     overflow-X: hidden;
 }
 	</style>
+	<link rel="stylesheet" href="header.css">
 
 	
 <body class="" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+<!-- /////////////////////// HEADER /////////////////////// -->
 <div id="top" class="topbar fixed-header animated slideInDown">
 	<div class="h13-topbar bg-light hidden-md-down">
         <div class="container">
@@ -162,5 +164,7 @@ body{
         </div>
     </div>
 </div>
+	<!-- /////////////////////// HEADER /////////////////////// -->
+
 </body>
 </html>
