--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@ body{
 }
 	</style>
 	<link rel="stylesheet" href="header.css">
+	<link rel="stylesheet" href="https://www.cmu.ac.th/Content/Plugin/style.css">
 
 	
 <body class="" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
