--- a/home.html
+++ b/home.html
@@ -24,6 +24,14 @@ body{
 	</style>
 	<link rel="stylesheet" href="header.css">
 	<link rel="stylesheet" href="https://www.cmu.ac.th/Content/Plugin/style.css">
+	<link rel="stylesheet" href="https://www.cmu.ac.th/Content/Plugin/animate.css">
+	<link rel="stylesheet" href="https://www.cmu.ac.th/Content/Plugin/index-landingpage/landing-page.css">
+	<link rel="stylesheet" href="https://www.cmu.ac.th/scss/mixins/_grid.scss">
+	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="">
 
 	
 <body class="" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
