--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@ body{
 	<link rel="stylesheet" href="https://www.cmu.ac.th/Content/Plugin/animate.css">
 	<link rel="stylesheet" href="https://www.cmu.ac.th/Content/Plugin/index-landingpage/landing-page.css">
 	<link rel="stylesheet" href="https://www.cmu.ac.th/scss/mixins/_grid.scss">
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="grid.css">
 	<link rel="stylesheet" href="">
 	<link rel="stylesheet" href="">
 	<link rel="stylesheet" href="">
