--- a/cn/home.html
+++ b/cn/home.html
@@ -143,10 +143,10 @@ function myFunction3() {
                                                     <li class="nav-item"><a class="nav-link font-weight-light">|</a></li>
                             
                                                     <li class="nav-item dropdown">
-                                                        <a id="wucNavBar_hl_th" class="nav-link dropdown-toggle text-dark font-weight-light" href="../home.html">TH</a>
+                                                        <a id="wucNavBar_hl_th" class="nav-link dropdown-toggle text-dark font-weight-light" href="../home">TH</a>
                                                     </li>
                                                     <li class="nav-item dropdown">
-                                                        <a id="wucNavBar_hl_en" class="nav-link dropdown-toggle text-dark font-weight-light" href="../en/home.html">EN</a>
+                                                        <a id="wucNavBar_hl_en" class="nav-link dropdown-toggle text-dark font-weight-light" href="../en/home">EN</a>
                                                     </li>
                             
                                                     <li class="nav-item dropdown">
