--- a/cn/home.html
+++ b/cn/home.html
@@ -7,10 +7,11 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="https://www.cmu.ac.th/Content/images/favicon.ico">
 	<meta name="Author" content="Chiang Mai University">
 	<meta name="keywords" content="Chiang Mai University, University of Excellence Where Nature Nurtures Beautiful Intelligence, Thailand, Thai University">
-	<meta name="Keywords" lang="th" content="มหาวิทยาลัยเชียงใหม่, ม.เชียงใหม่, มหาวิทยาลัย, มช., มหาวิทยาลัยเชียงใหม่ มุ่งสร้างสรรค์สังคมที่มีสิ่งแวดล้อมที่ดี สังคมแห่งสุขภาพ และผู้สูงอายุสุขภาพดี สังคมที่รักษาวัฒนธรรมล้านนาและพัฒนาเศรษฐกิจที่ยั่งยืน พร้อมวางแนวทาง CMU Transformation สู่ “ก้าวใหม่ มช.” สนับสนุนการศึกษารูปแบบใหม่ ส่งเสริมการเรียนรู้ตลอดชีวิต ผลักดันการนำเทคโนโลยี มาพัฒนาการดำเนินงานต่างๆ เพื่อเป็นมหาวิทยาลัยแห่งนวัตกรรมต้นแบบเพื่อชุมชน และร่วมพัฒนาสังคมอย่างยั่งยืน
-ผลิตบัณฑิตที่มีคุณธรรม คุณภาพและมีทักษะการเป็นพลเมืองโลก วิจัยเพื่อความเป็นเลิศและนวัตกรรม บริการวิชาการที่เกิดประโยชน์แก่สังคม">
-	<meta name="description" content="Chiang Mai University is University of Excellence Where Nature Nurtures Beautiful Intelligence"><meta name="description" lang="th" content="มหาวิทยาลัยเชียงใหม่ มุ่งสร้างสรรค์สังคมที่มีสิ่งแวดล้อมที่ดี สังคมแห่งสุขภาพ และผู้สูงอายุสุขภาพดี สังคมที่รักษาวัฒนธรรมล้านนาและพัฒนาเศรษฐกิจที่ยั่งยืน พร้อมวางแนวทาง CMU Transformation สู่ “ก้าวใหม่ มช.” สนับสนุนการศึกษารูปแบบใหม่ ส่งเสริมการเรียนรู้ตลอดชีวิต ผลักดันการนำเทคโนโลยี มาพัฒนาการดำเนินงานต่างๆ เพื่อเป็นมหาวิทยาลัยแห่งนวัตกรรมต้นแบบเพื่อชุมชน และร่วมพัฒนาสังคมอย่างยั่งยืน
-ผลิตบัณฑิตที่มีคุณธรรม คุณภาพและมีทักษะการเป็นพลเมืองโลก วิจัยเพื่อความเป็นเลิศและนวัตกรรม บริการวิชาการที่เกิดประโยชน์แก่สังคม">
+	<meta name="Keywords" lang="th" content="清迈大学, 清迈大学, 大学, CMU, 清迈大学旨在创建一个良好环境的社会。健康协会和健康的老年人一个保护兰纳文化并发展可持续经济的社会。准备制定卡内基梅隆大学转型指导方针，以支持新的教育形式，迈向“卡内基梅隆大学的新一步”。促进终身学习推动技术的采用快来开展各种业务吧。成为社会的创新型示范大学。并参与社会可持续发展
+培养有道德的毕业生成为全球公民的素质和技能追求卓越和创新的研究造福社会的学术服务">
+	<meta name="description" content="Chiang Mai University is University of Excellence Where Nature Nurtures Beautiful Intelligence">
+	<meta name="description" lang="th" content="ม清迈大学旨在创建一个良好环境的社会。健康协会和健康的老年人一个保护兰纳文化并发展可持续经济的社会。准备制定卡内基梅隆大学转型指导方针，以支持新的教育形式，迈向“卡内基梅隆大学的新一步”。促进终身学习推动技术的采用快来开展各种业务吧。成为社会的创新型示范大学。并参与社会可持续发展
+培养有道德的毕业生成为全球公民的素质和技能追求卓越和创新的研究造福社会的学术服务">
 	<meta name="robots" content="index,follow">
 	<title>มหาวิทยาลัยเชียงใหม่ : Chiang Mai University, THAILAND</title>
 	<style>
