--- a/home.html
+++ b/home.html
@@ -157,11 +157,11 @@ function myFunction3() {
                                                         <a id="wucNavBar_hl_th" class="nav-link dropdown-toggle text-dark font-weight-light" href="#">TH</a>
                                                     </li>
                                                     <li class="nav-item dropdown">
-                                                        <a id="wucNavBar_hl_en" class="nav-link dropdown-toggle text-dark font-weight-light" href="../cmu.github.io/en/home">EN</a>
+                                                        <a id="wucNavBar_hl_en" class="nav-link dropdown-toggle text-dark font-weight-light" href="/en/home">EN</a>
                                                     </li>
                             
                                                     <li class="nav-item dropdown">
-                                                        <a id="wucNavBar_hl_cn" class="nav-link dropdown-toggle text-dark font-weight-light" href="../cmu.github.io/cn/home">CN</a>
+                                                        <a id="wucNavBar_hl_cn" class="nav-link dropdown-toggle text-dark font-weight-light" href="/cn/home">CN</a>
                                                     </li>
                             
                                                     <li class="nav-item search dropdown"><a class="nav-link dropdown-toggle topbarmenu-color" href="javascript:void(0)" id="h15-sdropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-search"></i></a>
