--- a/admission/index.html
+++ b/admission/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-
+<html>
+    <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-
-
     <link href="https://fonts.googleapis.com/css?family=Taviraj|Mitr|Pridi|Prompt|Kanit|Trirong|Maitree|Athiti" rel="stylesheet">
     <link href="tcas/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>การรับนักเรียน/บุคคล เข้าศึกษาต่อมหาวิทยาลัยเชียงใหม่ ประจำปีการศึกษา 2568</title>
 
@@ -128,7 +125,7 @@ body, html {
     <div class="wrapper">
         <div class="content">
             <div class="text-center header-content text-black">
-                <img src="tcas/images/cmu-sub-logo-1.png" class="responsive-img">
+                <img src="tcas/images/lu-sub-logo-1.png" class="responsive-img">
                 <p class="mt-2 fw-bold font-head">รับเข้าศึกษา มหาวิทยาลัยเชียงใหม่<br>Admission to Chaing Mai University</p>
             </div>
 
