--- a/admission/index.html
+++ b/admission/index.html
@@ -126,7 +126,7 @@ body, html {
         <div class="content">
             <div class="text-center header-content text-black">
                 <img src="tcas/images/lu-sub-logo-1.png" class="responsive-img">
-                <p class="mt-2 fw-bold font-head">รับเข้าศึกษา มหาวิทยาลัยเชียงใหม่<br>Admission to Chaing Mai University</p>
+                <p class="mt-2 fw-bold font-head">รับเข้าศึกษา มหาวิทยาลัยล้านนา<br>Admission to Lanna University</p>
             </div>
 
             <div class="container">
