--- a/admission/index.html
+++ b/admission/index.html
@@ -7,9 +7,7 @@
     <link href="tcas/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>การรับนักเรียน/บุคคล เข้าศึกษาต่อมหาวิทยาลัยเชียงใหม่ ประจำปีการศึกษา 2568</title>
-
-
+    <title>การรับนักเรียน/บุคคล เข้าศึกษาต่อมหาวิทยาลัยล้านนา ประจำปีการศึกษา 2568</title>
     <style type="text/css">
         .footer-content {
             background-image: url('tcas/images/index_footer.png');
@@ -144,9 +142,9 @@ body, html {
 
 
         <div class="text-center footer-content text-black">
-            <p><br>Registration Office, Chiang Mai University<br>
-                239 Huay Kaew Road, Suthep, Muang, Chiang Mai 50200, Thailand<br>
-            © Copyright Registration Office, Chiang Mai University. All Rights Reserved</p>
+            <p><br>Registration Office, Lanna University<br>
+                196 Kaeonawarat Road, Wat Ket, Mueang , Chiang Mai 50000, Thailand<br>
+            © Copyright Registration Office, Lanna University. All Rights Reserved</p>
         </div>
     </div>
 
