--- a/admission/index.html
+++ b/admission/index.html
@@ -131,8 +131,8 @@ body, html {
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 text-center align-items-center">
-                        <a href="tcas/app.php"><img src="tcas/images/index_1.png" width="100%" class="mt-1 borderimg shadow-sm mb-3"></a>
-                        <a href="ipas/index.php"><img src="tcas/images/index_2.png" width="100%" class="mt-1 borderimg shadow-sm mb-3"></a>
+                        <a href="tcas/app"><img src="tcas/images/index_1.png" width="100%" class="mt-1 borderimg shadow-sm mb-3"></a>
+                        <a href="ipas/index"><img src="tcas/images/index_2.png" width="100%" class="mt-1 borderimg shadow-sm mb-3"></a>
                         <a href="gpas/" target="_blank"><img src="tcas/images/index_3.png" width="100%" class="mt-1 borderimg shadow-sm"></a>
                     </div>
                     <div class="col-md-2"></div>
