--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -117,8 +117,8 @@
   body h3, h4 { font-family:Kanit;  }
 </style>
 
-<div class="container-fluid p-4 shadow mb-4" style="background-color:#002281;">
- <div class="container" style="background-color:#002281;">
+<div class="container-fluid p-4 shadow mb-4" style="background-color:#ffc107;">
+ <div class="container" style="background-color:#ffc107;">
    <div class="row">
      <div class="col-md-2 text-center">
        <a href="https://cmu-ac-th.pages.dev/admission/"><img src = "https://cmu-ac-th.pages.dev/admission/tcas/images/lu-sub-logo-1.png" class="img-res" /></a>
