--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -275,7 +275,7 @@
 
 	<div id="download">
 				<a href="https://www1.reg.cmu.ac.th/pr-admission/" target="_blank"><img src="images/news_banner_faculty_recive.png" style="width:100%;" /></a>
-		<div class="fs-4 shadow p-2 mb-4 rounded" style="background-color:#fbab1e; color:#000000;"><i class="fa fa-address-card-o"></i> การรับสมัครคัดเลือกบุคคลเข้าศึกษา</div>
+		<div class="fs-4 shadow p-2 mb-4 rounded" style="background-color:#ffc107; color:#000000;"><i class="fa fa-address-card-o"></i> การรับสมัครคัดเลือกบุคคลเข้าศึกษา</div>
 		<!-- 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
