--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -444,87 +444,89 @@
 								<div class="row">
 											<div class="col-md-6">							<h4 class="fs-5 fw-bold p-2">ประกาศ/ข่าวประชาสัมพันธ์</h4>
 							<table class="table table-striped">
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/6d7114097de90b2d78bd87fefff22105.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การเลื่อนกำหนดวันสอบสัมภาษณ์เฉพาะผู้ที่ได้รับผลกระทบ จากการประกาศเลื่อนสอบ TGAT/TPAT 2-5 ในจังหวัดภาคใต้ตอนล่าง   TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio  ระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="https://admission.reg.cmu.ac.th/tcas/apply.php?page=login" target="_blank" style="color:#0000FF;"> ประกาศรายชื่อผู้มีสิทธิ์เข้าสอบสัมภาษณ์ TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568 (เข้าดูผลโดยการล็อกอินเข้าสู่ระบบรับสมัคร) </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="https://cmu.to/ManualTCAS168" target="_blank" style="color:#0000FF;"> คู่มือการรับสมัคร TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568 </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/9d2494b6390050424b14ded2324020ca.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่องการรับสมัครคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  คณะเทคนิคการแพทย์ มหาวิทยาลัยล้านนา (การรับนักเรียนที่ดำเนินการโดยคณะ) โครงการรับนักศึกษาสาขากิจกรรมบำบัดและรังสีเทคนิคเป็นกรณีพิเศษ เพื่อแก้ไขปัญหาความขาดแคลนบุคลากรในพื้นที่จังหวัดชายแดนภาคใต้ คณะเทคนิคการแพทย์ มหาวิทยาลัยล้านนา และศูนย์อำนวยการบริหารจังหวัดชายแดนภาคใต้  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/1b051d289b61d0fc9c02d680ecafafb8.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนด้วยแฟ้มสะสมผลงาน หลักสูตรบัญชีบัณฑิต (หลักสูตรนานาชาติ) ปีการศึกษา 2568  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/848c8b10a1087a855c8a33a9bed63875.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการผู้มีศักยภาพสู่การเป็นผู้ประกอบการธุรกิจบริการ ปีการศึกษา 2568    </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/2281adde4a6dde955d26986fb1f8fab7.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการทายาทผู้ประกอบการธุรกิจบริการ ปีการศึกษา 2568  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/bbbda3ebaaf669a785ae3a4154d0055c.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนผู้มีผลการเรียนดีและมีศักยภาพสูงด้านการเป็นผู้ประกอบการ ปีการศึกษา 2568  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/5f75a79bcfd4e86c29078b92bc75e5a1.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนที่มีผลการเรียนดี ไร้รัฐ ไร้สัญชาติได้ขึ้นทะเบียนจากกรมการปกครอง กระทรวงมหาดไทย เพื่อเข้าศึกษาต่อระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/16d304b182446544b4c8953b9ca0abfa.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนที่มีผลการเรียนดีและเป็นบุคคลแรกของครอบครัวที่สมัครเข้าศึกษาต่อระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/1baa559d97171add97e95fba32961a2b.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนที่มีผลการเรียนดีและมีศักยภาพพิเศษในการเป็นผู้นำและในทางธุรกิจและสังคม ปีการศึกษา 2568   </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/a162cb2158c4b3f5e962379c32ec759a.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี  โครงการรับนักเรียนที่มีผลการเรียนดีและเป็นทายาทผู้ประกอบการธุรกิจ ปีการศึกษา 2568   </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/1dfe2732b0a2e693859a33e9f4c2b3f9.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี  โครงการรับนักเรียนที่มีผลการเรียนดีและเป็นทายาทศิษย์เก่า บัญชี-บริหารธุรกิจ ปีการศึกษา 2568   </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/155f57eabe95bf5da69c624e1e4c1d32.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568 คณะวิทยาศาสตร์ มหาวิทยาลัยล้านนา (การรับนักเรียนที่ดำเนินการโดยคณะ)   </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/f7ab854460a4c3b27f2aebf699122b20.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาต่อในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  วิทยาลัยศิลปะ สื่อ และเทคโนโลยี สาขาวิชาบูรณาการอุตสาหกรรมดิจิทัล (การรับนักเรียนที่ดำเนินการโดยคณะ) โครงการความร่วมมือกับอุตสาหกรรมดิจิทัล   </a>										</td>
-									</tr>
-																	<tr>
-										<td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
-										<td>
-											<a href="files_download/48223bbdc88b05ecebe6bfd23f237f6c.pdf" target="_blank" style="color:#0000FF;">กำหนดการคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
-									</tr>
-															</table>
+							    <style>.none{display: none;}</style>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/6d7114097de90b2d78bd87fefff22105.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การเลื่อนกำหนดวันสอบสัมภาษณ์เฉพาะผู้ที่ได้รับผลกระทบ จากการประกาศเลื่อนสอบ TGAT/TPAT 2-5 ในจังหวัดภาคใต้ตอนล่าง   TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio  ระดับปริญญาตรี ปีการศึกษา 2568  </a>										
+							        </td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="https://admission.reg.cmu.ac.th/tcas/apply.php?page=login" target="_blank" style="color:#0000FF;"> ประกาศรายชื่อผู้มีสิทธิ์เข้าสอบสัมภาษณ์ TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568 (เข้าดูผลโดยการล็อกอินเข้าสู่ระบบรับสมัคร) </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="https://cmu.to/ManualTCAS168" target="_blank" style="color:#0000FF;"> คู่มือการรับสมัคร TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568 </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/9d2494b6390050424b14ded2324020ca.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่องการรับสมัครคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  คณะเทคนิคการแพทย์ มหาวิทยาลัยล้านนา (การรับนักเรียนที่ดำเนินการโดยคณะ) โครงการรับนักศึกษาสาขากิจกรรมบำบัดและรังสีเทคนิคเป็นกรณีพิเศษ เพื่อแก้ไขปัญหาความขาดแคลนบุคลากรในพื้นที่จังหวัดชายแดนภาคใต้ คณะเทคนิคการแพทย์ มหาวิทยาลัยล้านนา และศูนย์อำนวยการบริหารจังหวัดชายแดนภาคใต้  </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/1b051d289b61d0fc9c02d680ecafafb8.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนด้วยแฟ้มสะสมผลงาน หลักสูตรบัญชีบัณฑิต (หลักสูตรนานาชาติ) ปีการศึกษา 2568  </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/848c8b10a1087a855c8a33a9bed63875.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการผู้มีศักยภาพสู่การเป็นผู้ประกอบการธุรกิจบริการ ปีการศึกษา 2568    </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/2281adde4a6dde955d26986fb1f8fab7.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการทายาทผู้ประกอบการธุรกิจบริการ ปีการศึกษา 2568  </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/bbbda3ebaaf669a785ae3a4154d0055c.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนผู้มีผลการเรียนดีและมีศักยภาพสูงด้านการเป็นผู้ประกอบการ ปีการศึกษา 2568  </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/5f75a79bcfd4e86c29078b92bc75e5a1.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครสอบคัดเลือกเพื่อเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนที่มีผลการเรียนดี ไร้รัฐ ไร้สัญชาติได้ขึ้นทะเบียนจากกรมการปกครอง กระทรวงมหาดไทย เพื่อเข้าศึกษาต่อระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/16d304b182446544b4c8953b9ca0abfa.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนที่มีผลการเรียนดีและเป็นบุคคลแรกของครอบครัวที่สมัครเข้าศึกษาต่อระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/1baa559d97171add97e95fba32961a2b.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี โครงการรับนักเรียนที่มีผลการเรียนดีและมีศักยภาพพิเศษในการเป็นผู้นำและในทางธุรกิจและสังคม ปีการศึกษา 2568   </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/a162cb2158c4b3f5e962379c32ec759a.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี  โครงการรับนักเรียนที่มีผลการเรียนดีและเป็นทายาทผู้ประกอบการธุรกิจ ปีการศึกษา 2568   </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/1dfe2732b0a2e693859a33e9f4c2b3f9.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาระดับปริญญาตรี  โครงการรับนักเรียนที่มีผลการเรียนดีและเป็นทายาทศิษย์เก่า บัญชี-บริหารธุรกิจ ปีการศึกษา 2568   </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/155f57eabe95bf5da69c624e1e4c1d32.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568 คณะวิทยาศาสตร์ มหาวิทยาลัยล้านนา (การรับนักเรียนที่ดำเนินการโดยคณะ)   </a>										</td>
+							    </tr>
+							    <tr class="none">
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/f7ab854460a4c3b27f2aebf699122b20.pdf" target="_blank" style="color:#0000FF;">ประกาศมหาวิทยาลัยล้านนา เรื่อง การรับสมัครคัดเลือกบุคคลเข้าศึกษาต่อในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 แฟ้มสะสมผลงาน Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  วิทยาลัยศิลปะ สื่อ และเทคโนโลยี สาขาวิชาบูรณาการอุตสาหกรรมดิจิทัล (การรับนักเรียนที่ดำเนินการโดยคณะ) โครงการความร่วมมือกับอุตสาหกรรมดิจิทัล   </a>										</td>
+							    </tr>
+							    <tr>
+							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
+							        <td>
+							            <a href="files_download/48223bbdc88b05ecebe6bfd23f237f6c.pdf" target="_blank" style="color:#0000FF;">กำหนดการคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
+							    </tr>
+							</table>
 						</div>
 											<div class="col-md-6">							<h4 class="fs-5 fw-bold p-2">ประกาศระเบียบการรับสมัคร</h4>
 							<table class="table table-striped">
