--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -17,6 +17,9 @@
 	.mover:hover{
 		background-color: #f8edfc;
 	}
+	.panel-heading:hover + #collapseTwo {
+	    display: block !important;
+	}
 </style>
 <script type="text/javascript">
 	$(document).ready(function(){
