--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -17,9 +17,25 @@
 	.mover:hover{
 		background-color: #f8edfc;
 	}
+        .panel-collapse {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.5s ease-out;
+        }
 	.panel-heading:hover + #collapseTwo {
 	    display: block !important;
 	}
+	.panel-heading:hover + #collapseFour {
+	    display: block !important;
+	}
+	.panel-heading:hover + #collapseFive {
+	    display: block !important;
+	}
+        .panel-heading:hover + #collapseTwo,
+        .panel-heading:hover + #collapseFour,
+        .panel-heading:hover + #collapseFive {
+            max-height: 100%; /* หรือปรับตามความเหมาะสม */
+        }
 </style>
 <script type="text/javascript">
 	$(document).ready(function(){
