--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -18,11 +18,12 @@
 		background-color: #f8edfc;
 	}
         .panel-collapse {
+	    display: block !important;
             max-height: 0;
             overflow: hidden;
             transition: max-height 0.5s ease-out;
         }
-	.panel-heading:hover + #collapseTwo {
+/* 	.panel-heading:hover + #collapseTwo {
 	    display: block !important;
 	}
 	.panel-heading:hover + #collapseFour {
@@ -30,7 +31,7 @@
 	}
 	.panel-heading:hover + #collapseFive {
 	    display: block !important;
-	}
+	} */
         .panel-heading:hover + #collapseTwo,
         .panel-heading:hover + #collapseFour,
         .panel-heading:hover + #collapseFive {
