--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -17,13 +17,7 @@
 	.mover:hover{
 		background-color: #f8edfc;
 	}
-        .panel-collapse {
-	    display: block !important;
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.5s ease-out;
-        }
-/* 	.panel-heading:hover + #collapseTwo {
+	.panel-heading:hover + #collapseTwo {
 	    display: block !important;
 	}
 	.panel-heading:hover + #collapseFour {
@@ -31,12 +25,7 @@
 	}
 	.panel-heading:hover + #collapseFive {
 	    display: block !important;
-	} */
-        .panel-heading:hover + #collapseTwo,
-        .panel-heading:hover + #collapseFour,
-        .panel-heading:hover + #collapseFive {
-            max-height: 100%; /* หรือปรับตามความเหมาะสม */
-        }
+	}
 </style>
 <script type="text/javascript">
 	$(document).ready(function(){
