--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -533,7 +533,7 @@
 							    <tr>
 							        <td width="5%"><i class="fa fa-caret-right fa-lg"></i></td>
 							        <td>
-							            <a href="files_download/48223bbdc88b05ecebe6bfd23f237f6c.pdf" target="_blank" style="color:#0000FF;">กำหนดการคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
+							            <a href="files_download/48223bbdc88b05ecebe6bfd23f237f6c.html" target="_blank" style="color:#0000FF;">กำหนดการคัดเลือกบุคคลเข้าศึกษาในมหาวิทยาลัยล้านนา TCAS รอบที่ 1 Portfolio ระดับปริญญาตรี ปีการศึกษา 2568  </a>										</td>
 							    </tr>
 							</table>
 						</div>
