--- a/admission/tcas/files_download/48223bbdc88b05ecebe6bfd23f237f6c.html
+++ b/admission/tcas/files_download/48223bbdc88b05ecebe6bfd23f237f6c.html
@@ -19,6 +19,8 @@
             width: 80%;
             height: 90%;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            background: #fff;
+            border-radius: 20px;
         }
     </style>
 </head>
