--- a/admission/tcas/files_download/48223bbdc88b05ecebe6bfd23f237f6c.html
+++ b/admission/tcas/files_download/48223bbdc88b05ecebe6bfd23f237f6c.html
@@ -21,6 +21,12 @@
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
             background: #fff;
             border-radius: 20px;
+            transition: width 0.3s ease;
+        }
+        @media (min-width: 1200px) {
+            iframe {
+                width: 50%; /* เปลี่ยนขนาดเมื่อหน้าจอ > 1200px */
+            }
         }
     </style>
 </head>
