--- a/admission/tcas/files_download/48223bbdc88b05ecebe6bfd23f237f6c.html
+++ b/admission/tcas/files_download/48223bbdc88b05ecebe6bfd23f237f6c.html
@@ -23,9 +23,9 @@
             border-radius: 20px;
             transition: width 0.3s ease;
         }
-        @media (min-width: 1200px) {
+        @media (min-width: 800px) {
             iframe {
-                width: 50%; /* เปลี่ยนขนาดเมื่อหน้าจอ > 1200px */
+                width: 820px; /* เปลี่ยนขนาดเมื่อหน้าจอ > 1200px */
             }
         }
     </style>
