--- a/admission/tcas/app.html
+++ b/admission/tcas/app.html
@@ -157,7 +157,7 @@
 					<a href="#" class="list-group-item fs-3" style="background-color: #002281; color:#FFFFFF">
 						เมนูรับสมัคร
 					</a>
-					<a href="apply.php" class="list-group-item mover" style="color:#060;"><span class="fa fa-user-plus"></span> คลิกที่นี่...<br />&nbsp;&nbsp;&nbsp;&nbsp;เพื่อสมัคร TCAS</a>
+					<a href="apply" class="list-group-item mover" style="color:#060;"><span class="fa fa-user-plus"></span> คลิกที่นี่...<br />&nbsp;&nbsp;&nbsp;&nbsp;เพื่อสมัคร TCAS</a>
 					<a href="findfaculty.php" class="list-group-item mover" style="color:#060; background-color:#F0FEC0;"><span class="fa fa-podcast"></span> ค้นหาคณะสาขาวิชา<br />&nbsp;&nbsp;&nbsp;ที่เปิดรับสมัคร</a>
 					<a href="../ipas/" class="list-group-item mover" style="color:#060;" target="_blank"><span class="fa fa-language"></span> Application for<br />&nbsp;&nbsp;&nbsp;Admission CMU-IPAS</a>
 				</div>
